adding curated content
