# openapi.json
@@ -225,6 +225,65 @@
                 ],
                 "x-ibm-application-icon": "<svg xmlns=\"http://www.w3.org/2000/svg\" id=\"OpenSearchicon\" viewBox=\"0 0 100 100\"> \n  <defs> \n    <linearGradient x1=\"0.085\" y1=\"0.085\" x2=\"0.915\" y2=\"0.915\" id=\"OpenSearchg\">\n      <stop offset=\"0\" stop-color=\"#1417cc\" stop-opacity=\"1\"/>\n      <stop offset=\"0.5\" stop-color=\"#1517cc\" stop-opacity=\"0\"/>\n      <stop offset=\"1\" stop-color=\"#1517cc\" stop-opacity=\"1\"/>\n    </linearGradient>\n  </defs>\n  <g transform=\"scale(0.39)\">\n  <rect width=\"256\" height=\"256\" rx=\"55\" ry=\"55\" x=\"0\" y=\"0\" fill=\"#1517cc\"/>\n  <rect width=\"246\" height=\"246\" rx=\"50\" ry=\"50\" x=\"5\" y=\"5\" fill=\"#5252f4\"/>\n  <rect width=\"236\" height=\"236\" rx=\"45\" ry=\"45\" x=\"10\" y=\"10\" fill=\"url(#OpenSearchg)\"/>\n  <path fill=\"none\" stroke=\"#fff\" stroke-width=\"26\" d=\"M 178 103 A 74 74 0 1 1  30,103 A 74 74 0 1 1  178 103 z\" transform=\"matrix(0.918696,0,0,0.918696,4.331024,5.50348)\"/>\n  <rect fill=\"#fff\" stroke=\"none\" width=\"102.33237\" height=\"39.089138\" x=\"211.87753\" y=\"-19.544645\" transform=\"matrix(0.707107,0.707107,-0.707107,0.707107,0,0)\"/>\n  </g>\n</svg>"
             }
+        },
+        "/generateContent": {
+            "get": {
+                "summary": "Ask Watson X Content",
+                "description": "Ask WatsonX Content",
+                "operationId": "getstandardwxoecontent",
+                "parameters": [
+                    {
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "title": "Data"
+                        },
+                        "name": "data",
+                        "in": "query",
+                        "x-ibm-order": 1,
+                        "x-ibm-multiline": "false"
+                    },
+                    {
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "title": "Question"
+                        },
+                        "name": "question",
+                        "in": "query",
+                        "x-ibm-order": 2,
+                        "x-ibm-multiline": "true"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/results"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/HTTPValidationError"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "HTTPBasic": []
+                    }
+                ],
+                "x-ibm-application-icon": "<svg xmlns=\"http://www.w3.org/2000/svg\" id=\"OpenSearchicon\" viewBox=\"0 0 100 100\"> \n  <defs> \n    <linearGradient x1=\"0.085\" y1=\"0.085\" x2=\"0.915\" y2=\"0.915\" id=\"OpenSearchg\">\n      <stop offset=\"0\" stop-color=\"#1417cc\" stop-opacity=\"1\"/>\n      <stop offset=\"0.5\" stop-color=\"#1517cc\" stop-opacity=\"0\"/>\n      <stop offset=\"1\" stop-color=\"#1517cc\" stop-opacity=\"1\"/>\n    </linearGradient>\n  </defs>\n  <g transform=\"scale(0.39)\">\n  <rect width=\"256\" height=\"256\" rx=\"55\" ry=\"55\" x=\"0\" y=\"0\" fill=\"#1517cc\"/>\n  <rect width=\"246\" height=\"246\" rx=\"50\" ry=\"50\" x=\"5\" y=\"5\" fill=\"#5252f4\"/>\n  <rect width=\"236\" height=\"236\" rx=\"45\" ry=\"45\" x=\"10\" y=\"10\" fill=\"url(#OpenSearchg)\"/>\n  <path fill=\"none\" stroke=\"#fff\" stroke-width=\"26\" d=\"M 178 103 A 74 74 0 1 1  30,103 A 74 74 0 1 1  178 103 z\" transform=\"matrix(0.918696,0,0,0.918696,4.331024,5.50348)\"/>\n  <rect fill=\"#fff\" stroke=\"none\" width=\"102.33237\" height=\"39.089138\" x=\"211.87753\" y=\"-19.544645\" transform=\"matrix(0.707107,0.707107,-0.707107,0.707107,0,0)\"/>\n  </g>\n</svg>"
+            }
         }
     },
     "components": {
